--- a/YouTube_downloader.ui
+++ b/YouTube_downloader.ui
@@ -7,13 +7,13 @@
     <x>0</x>
     <y>0</y>
     <width>300</width>
-    <height>300</height>
+    <height>350</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>300</width>
-    <height>300</height>
+    <height>350</height>
    </size>
   </property>
   <property name="sizeIncrement">
@@ -27,6 +27,9 @@
     <family>맑은 고딕</family>
     <pointsize>10</pointsize>
    </font>
+  </property>
+  <property name="focusPolicy">
+   <enum>Qt::ClickFocus</enum>
   </property>
   <property name="acceptDrops">
    <bool>true</bool>
@@ -61,10 +64,10 @@
      <x>0</x>
      <y>0</y>
      <width>301</width>
-     <height>301</height>
+     <height>351</height>
     </rect>
    </property>
-   <layout class="QVBoxLayout" name="main_layout" stretch="1,9,1">
+   <layout class="QVBoxLayout" name="main_layout" stretch="1,7,1">
     <property name="spacing">
      <number>10</number>
     </property>
@@ -86,7 +89,7 @@
     <item>
      <layout class="QHBoxLayout" name="search_panel" stretch="4,1">
       <item>
-       <widget class="QTextEdit" name="search_input">
+       <widget class="QLineEdit" name="search_input">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Ignored" vsizetype="Ignored">
           <horstretch>0</horstretch>
@@ -99,34 +102,12 @@
           <height>25</height>
          </size>
         </property>
-        <property name="maximumSize">
-         <size>
-          <width>16777215</width>
-          <height>40</height>
-         </size>
-        </property>
-        <property name="acceptDrops">
-         <bool>false</bool>
-        </property>
-        <property name="layoutDirection">
-         <enum>Qt::LeftToRight</enum>
-        </property>
-        <property name="autoFillBackground">
-         <bool>false</bool>
-        </property>
         <property name="styleSheet">
          <string notr="true">background-color: white;
 color : black;</string>
         </property>
-        <property name="locale">
-         <locale language="English" country="UnitedStates"/>
-        </property>
-        <property name="html">
-         <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Gulim'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;유튜브 주소를 입력해주세요.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <property name="text">
+         <string/>
         </property>
        </widget>
       </item>
@@ -198,8 +179,10 @@ font : 15pt &quot;맑은 고딕&quot;;</string>
  YouTube 영상/재생목록 
 주소를 입력해주세요.
 
-저장위치 변경 : 
-폴더 드롭다운</string>
+위치조절 : 좌클릭 + 드래그
+크기조절 : 우클릭 + 드래그
+폴더변경 : 드래그  앤  드롭
+사용종료 : 중클릭</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
@@ -286,54 +269,5 @@ font:500 12pt &quot;맑은 고딕&quot;;</string>
   </widget>
  </widget>
  <resources/>
- <connections>
-  <connection>
-   <sender>search_input</sender>
-   <signal>textChanged()</signal>
-   <receiver>search_btn</receiver>
-   <slot>click()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>119</x>
-     <y>23</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>262</x>
-     <y>23</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>search_btn</sender>
-   <signal>clicked()</signal>
-   <receiver>image_viewer</receiver>
-   <slot>update()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>262</x>
-     <y>23</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>150</x>
-     <y>150</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>btn_exit</sender>
-   <signal>clicked()</signal>
-   <receiver>YouTube_downloader</receiver>
-   <slot>close()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>246</x>
-     <y>277</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>149</x>
-     <y>149</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
