--- a/YouTube_downloader.ui
+++ b/YouTube_downloader.ui
@@ -146,14 +146,14 @@ font:500 12pt &quot;맑은 고딕&quot;;</string>
     <item>
      <widget class="QLabel" name="image_viewer">
       <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
         <horstretch>0</horstretch>
-        <verstretch>1</verstretch>
+        <verstretch>0</verstretch>
        </sizepolicy>
       </property>
       <property name="minimumSize">
        <size>
-        <width>0</width>
+        <width>50</width>
         <height>100</height>
        </size>
       </property>
